Fix overflow-wrap for main article body

--- a/src/components/MainBody/MainBody.module.css
+++ b/src/components/MainBody/MainBody.module.css
@@ -9,4 +9,5 @@
 
 .Main div {
     max-width: 800px;
+    overflow-wrap: break-word;
 }
